# idcardReader-rust

./: .gitattributes  Cargo.toml  README.md  main.rs  websockets.html
